<resources>
    <string name="app_name">SpringCT1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="user_name">Enter Username</string>
    <string name="password">Enter Password</string>
    <string name="name">Name : </string>
    <string name="age">Age : </string>
    <string name="address_line">Address line : </string>
    <string name="city">City : </string>
    <string name="employee_details_form">Employee Details Form</string>
    <string name="add_employee">Add Employee</string>
    <string name="error_text">please enter valid username and password</string>
</resources>